--- a/index.html
+++ b/index.html
@@ -21,7 +21,15 @@
 			<button v-on:click="generateEnvelope">Send</button>
 		</div>
 
-		<script src="http://localhost:8080/socket.io/socket.io.js"></script>
+		<script>
+			if(location.hostname == "localhost" || location.hostname == "127.0.0.1") {
+				document.write("<script src=\"http://localhost:8080/socket.io/socket.io.js\"\>\<\/script>");
+			} else {
+				document.write("Hey there");
+				document.write("<script src=\"http://penguinegg.com:8080/socket.io/socket.io.js\"\>\<\/script>");
+			}
+		</script>
+
 		<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 
 		<script src="./node_modules/crypto-js/crypto-js.js"></script>
