--- a/index.html
+++ b/index.html
@@ -4,12 +4,20 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<title>CryptoChat: Secure Online Messaging</title>
+
+		<style>
+			li {
+				overflow-wrap: break-word;
+				word-wrap: break-word;
+				word-break: break-word;
+			}
+		</style>
 	</head>
 	<body>
 		<div id="app">
 			<div v-if="connectionWarning"><strong>Warning: Cannot connect to Socket.io server!</strong></div>
 			<ul id="messages">
-				<li v-for="message in messages">{{message}}</li>
+				<li v-for="message in messages"><pre>{{message}}</pre></li>
 			</ul>
 
 			KE: <input type="text" id="ke" autocomplete="off" v-model="envelope.ke"><br>
@@ -30,8 +38,8 @@
 			}
 		</script>
 
+		<script src="./node_modules/axios/dist/axios.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-
 		<script src="./node_modules/crypto-js/crypto-js.js"></script>
 		<script src="./node_modules/jsencrypt/bin/jsencrypt.min.js"></script>
 		<script src="app.js"></script>
