--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 				word-wrap: break-word;
 				word-break: break-word;
 			}
+
+			label {
+				display: inline-block;
+				width: 100px;
+			}
 		</style>
 	</head>
 	<body>
@@ -20,13 +25,35 @@
 				<li v-for="message in messages"><pre>{{message}}</pre></li>
 			</ul>
 
-			KE: <input type="text" id="ke" autocomplete="off" v-model="envelope.ke"><br>
-			IV: <input type="text" id="iv" autocomplete="off" v-model="envelope.iv"><br>
-			KM: <input type="text" id="km" autocomplete="off" v-model="envelope.km"><br>
-			SQN: <input type="number" id="seqnum" v-model="envelope.seqnum"><br>
+			<hr>
+
+			<label for="snd">SND:</label>
+			<select v-model="envelope.snd" id="snd">
+				<option v-for="user in users" v-bind:value="user.user_id">
+				{{ user.first_name + " " + user.last_name }}
+				</option>
+			</select>
+			<span>Selected: {{ envelope.snd }}</span><br>
+
+			<label for="rcv">RCV:</label>
+			<select v-model="envelope.rcv" id="rcv">
+				<option v-for="user in users" v-bind:value="user.user_id" v-if="user.user_id != envelope.snd">
+				{{ user.first_name + " " + user.last_name }}
+				</option>
+			</select>
+			<span>Selected: {{ envelope.rcv }}</span><br>
+
+			<label for="ke">KE:</label>
+			<input type="text" id="ke" autocomplete="off" style="width: 600px;" disabled="disabled" v-model="envelope.ke"><br>
+			<label for="iv">IV:</label>
+			<input type="text" id="iv" autocomplete="off" style="width: 300px;" disabled="disabled" v-model="envelope.iv"><br>
+			<label for="km">KM:</label>
+			<input type="text" id="km" autocomplete="off" style="width: 300px;" disabled="disabled" v-model="envelope.km"><br>
+			<label for="sqn">SQN:</label>
+			<input type="number" id="seqnum" v-model="envelope.seqnum"><br>
 
 			<textarea id="payload" autocomplete="off" v-model="envelope.payload"></textarea>
-			<button v-on:click="generateEnvelope">Send</button>
+			<button v-on:click="sendMessage">Send</button>
 		</div>
 
 		<script>
