--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<title>CryptoChat: Secure Online Messaging</title>
+		<link rel="stylesheet" href="https://unpkg.com/nprogress@0.2.0/nprogress.css"
 		<link rel="stylesheet" href="/normalize.css">
 		<link rel="stylesheet" href="/style.css">
 	</head>
@@ -45,6 +46,7 @@
 			}
 		</script>
 
+		<script src="https://unpkg.com/nprogress@0.2.0/nprogress.js"></script>
 		<script src="build.js"></script>
 	</body>
 </html>
