--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
 				<div class="messages" id="messageList">
 					<message v-for="message in decryptedMessages" :key="message.timestamp"
 						v-if="message.cht == selectedChat"
-						v-bind:message="message"
-						v-bind:class="{me: message.snd == currentUser.user_id}"></message>
+						v-bind:message="message"></message>
 				</div>
 
 				<div class="compose" v-if="selectedChat">
