Add new user dialog

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 			<div class="chat-ui" v-if="uiState == 'chat'">
 				<div class="chats">
+					<div class="new-chat-button-wrapper"><button v-on:click="openChatCreationDialog">New Chat</button></div>
 					<chat-select v-for="chat in chats" :key="chat.chat_id"
 						v-bind:chat="chat"
 						v-bind:class="{selected: selectedChat == chat.chat_id}"
@@ -33,6 +34,32 @@
 						v-model="messageDrafts[selectedChat]"
 						v-on:keydown.enter="sendMessage"></textarea>
 					<button v-on:click="sendMessage">Send</button>
+				</div>
+			</div>
+
+			<div class="new-chat-modal" v-if="isChatCreationDialogOpen">
+				<div class="backdrop"></div>
+				<div class="modal">
+					<div class="modal__header">New Chat</div>
+					<div class="modal__body">
+						<div class="user-select" 
+							v-for="user in users"
+							v-if="user.user_id != currentUser.user_id"
+							v-on:click="toggleUserInPotentialChat(user.user_id)">
+							<div class="checkmark" 
+								v-bind:class="
+								{checked: (potentialChatUsers.indexOf(user.user_id) != -1)}">
+									
+							</div>
+
+							<div class="name">{{ user.first_name }} {{ user.last_name }}</div>
+							<div class="username">{{ user.username }}</div>
+						</div>
+					</div>
+					<div class="modal__footer">
+						<button v-on:click="closeChatCreationDialog">Cancel</button>
+						<button v-on:click="createChat">Begin Chat</button>
+					</div>
 				</div>
 			</div>
 		</div>
